2004-01-23  Jesper Harder  <harder@ifa.au.dk>

	* gnus-xmas.el (gnus-xmas-grouplens-menu-add): Remove.

	* gnus-sum.el (gnus-summary-line-format-alist): Remove grouplens.

	* gnus-start.el (gnus-1): do.

	* gnus-group.el (gnus-group-line-format-alist): do.

	* gnus.el: (gnus-use-grouplens, gnus-visual): do.

	* gnus-gl.el: Remove.

2004-01-23  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-sum.el (gnus-adjust-marks): Now correctly handles a list of
	marks consisting of a single range {for example, (3 . 5)} rather
	than a list of a single range { ((3 . 5)) }.

2004-01-23  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el (spam-stat-store-gnus-article-buffer): Use
	with-current-buffer.
	(spam-stat-store-current-buffer): Use insert-buffer-substring to
	avoid consing a string.

	* mm-util.el (mm-charset-synonym-alist): Add ks_c_5601-1987.
	Remove obsolete entries for big5 and gb2312.

2004-01-22  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-sum.el (gnus-adjust-marks): Avoid splicing null INTO the
	uncompressed list.

2004-01-22  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el (spam-stat-strip-xref): New function.
	(spam-stat-process-directory): Use it.

	* gnus-util.el (gnus-fetch-field): Don't bind case-fold-search
	here -- it's done in message-fetch-field.

2004-01-21  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-queue-mail,
	gnus-agent-prompt-send-queue): New variables.
	(gnus-agent-send-mail): Use gnus-agent-queue-mail.
	* gnus-draft.el (gnus-group-send-queue): Pass the group name
	"nndraft:queue" along to gnus-draft-send.  Use
	gnus-agent-prompt-send-queue.
	(gnus-draft-send): Rebind gnus-agent-queue-mail to nil when group
	is "nndraft:queue".  Suggested by Gaute Strokkenes
	<gs234@srcf.ucam.org>

	* gnus-agent.el (agent-disable-undownloaded-faces): Removed
	(agent-enable-undownloaded-faces): Added
	(gnus-agent-cat-groups): Use eval-and-compile, not