@@ -1,3 +1,8 @@
+2004-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* dgnushack.el: Advise byte-optimize-form-code-walker to optimize
+	the rest of the and/or forms.
+
 2004-01-23  Jesper Harder  <harder@ifa.au.dk>
 
 	* gnus-xmas.el (gnus-xmas-grouplens-menu-add): Remove.
